Fixing spacing issue for mobile headers, closes #37

--- a/imports/ui/components/navigation/NavigationBar.scss
+++ b/imports/ui/components/navigation/NavigationBar.scss
@@ -142,7 +142,7 @@ header.c-navigation-bar {
         }
 
         @media #{$mobile} {
-            padding: $spacing $half-spacing;
+            padding: $half-spacing;
 
             nav {
                 right: $half-spacing;
